# SyllabusOS

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: PROJECT_OVERVIEW.md  architecture.md
registry/: INDEX.md  catalog.json
scripts/: audit.py  md_to_pdf.py  pdf_to_text.py  scaffold.py
subjects/: README.md
templates/: INDEX.md
templates/course/: CLAUDE.md  PROFILE.md  README.md  kind.json
templates/course/indexes/: INDEX.md
templates/course/memory/: MEMORY.md
templates/course/skills/: README.md  ask.md  audit.md  chapter.md  export.md  intake.md
